--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -45,7 +45,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_event_title"
                 style="@style/TextInput.EditText"
                 android:layout_width="match_parent"
@@ -117,25 +117,26 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_event_alamat" />
 
             <TextView
-                android:id="@+id/tv_event_maps"
+                android:id="@+id/tv_event_gedung"
                 style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/maps"
+                android:text="@string/gedung"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_event_alamat" />
 
-
-            <fragment
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_event_gedung"
+                style="@style/TextInput.EditText"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_event_maps" />
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_gedung" />
+
 
             <TextView
                 android:id="@+id/tv_event_waktu"
@@ -147,7 +148,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/map" />
+                app:layout_constraintTop_toBottomOf="@id/et_event_gedung" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_event_waktu_awal"
@@ -217,26 +218,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_event_tanggal_awal" />
 
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/cg_event_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/tv_event_peserta"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_peserta" />
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_event_peserta"
                 style="@style/TextInput.EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_mdi_add_green"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_event_peserta" />
-
-            <ImageButton
-                android:id="@+id/ib_event_add_peserta"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:background="@color/colorAccent"
-                android:elevation="4dp"
-                android:src="@drawable/ic_mdi_add_green"
-                app:layout_constraintEnd_toEndOf="@id/et_event_peserta"
-                app:layout_constraintStart_toStartOf="@id/et_event_peserta"
-                app:layout_constraintTop_toBottomOf="@id/et_event_peserta" />
+                app:layout_constraintTop_toBottomOf="@id/cg_event_email" />
 
             <TextView
                 android:id="@+id/tv_event_berkas"
@@ -248,17 +245,23 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ib_event_add_peserta" />
+                app:layout_constraintTop_toBottomOf="@id/et_event_peserta" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_event_berkas"
-                style="@style/TextInput.EditText"
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/cg_event_berkas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_mdi_add_green"
+                app:layout_constraintStart_toStartOf="@id/tv_event_berkas"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_berkas" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_event_berkas"
+                style="@style/ButtonCustom.Outlined"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_event_berkas" />
+                app:layout_constraintTop_toBottomOf="@id/cg_event_berkas" />
 
             <Button
                 android:id="@+id/btn_event_create"
@@ -271,8 +274,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_event_berkas" />
-
+                app:layout_constraintTop_toBottomOf="@id/btn_event_berkas" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
