--- a/app/src/main/res/layout/rv_list_layout.xml
+++ b/app/src/main/res/layout/rv_list_layout.xml
@@ -5,9 +5,10 @@
     android:paddingStart="@dimen/marginStart"
     android:paddingEnd="@dimen/marginEnd"
     android:paddingTop="4dp"
+    android:id="@+id/constraint_list_container"
     android:paddingBottom="4dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.github.florent37.shapeofview.shapes.RoundRectView
         android:layout_width="match_parent"
@@ -55,7 +56,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Lt. 4 Rektorat" />
 
-            <view
+            <View
                 android:id="@+id/v_list_line"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -76,6 +77,7 @@
                 tools:text="12:00-02:00 PM" />
 
             <TextView
+                android:id="@+id/tv_list_date"
                 style="@style/TextAppearance.MdcTypographyStyles.Caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
