--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorNetral">#DBDBDB</color>
     <color name="colorBlack">#AB000000</color>
-
+    <color name="colorShimmer">#DDDDDD</color>
 </resources>
